[package]
name = "blink"
authors = ["stephanh <stephanh@users.noreply.github.com>"]
version = "0.1.0"
readme = "README.md"
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103" ] }
cortex-m = "0.6.0"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
#cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[[bin]]
name = "blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
